syntax = "proto3";

option java_package = "com.demo.grpc.stubs";
option java_multiple_files = true;

message HelloWorldRequest {
  // a name to greet, default is "World"
  string name = 1;
}

message HelloWorldResponse {
  string greeting = 1;
}

service HelloWorldService {
  rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse);
}